--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- Function for radial charts -->
     <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3-scale-radial.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
+
     <script src="main.js"></script>
     <style>
 
